--- a/styles.css
+++ b/styles.css
@@ -14,10 +14,12 @@
 /* Heder */
 header{
     width: 100%;
-    height: 4rem;
+    height: 4.2rem;
     display: block;
-    padding-bottom: 0.1rem;
+    margin: 0;
 }
+
+
 
 .toggle-btn{
     float: left;
@@ -26,9 +28,14 @@ header{
 }
 
 .logo-container{
-    margin-top:  1.25rem;
+    margin-top:  1.3rem;
     float: left;
-    width: 5vh;
+}
+.logo-container > img {
+    width: 14vh;
+    height: 100%;
+    min-width: 5rem;
+    max-width: 8rem;
 }
 
 .cart-container{
@@ -40,7 +47,7 @@ header{
 .avatar-container{
     width: 1.5rem;
     float: right;
-    margin-bottom: 1.1rem;
+
     margin-top: 1.2rem;
     margin-left: 1rem;
     margin-right: 1rem;
@@ -82,32 +89,114 @@ header{
     height: 100%;
     margin-top: -2rem;
     margin-bottom: -3rem;
-    position: relative;
 }
 
 .img > img{
     width: 100%;
     height: 100%;
-    position: relative;
+
 }
 
 .next, .previous {
     border-radius: 50%;
-    width: 2rem;
-    height: 2rem;
+    width: 1.8rem;
+    height: 1.8rem;
     background: white;
-    border: solid black 1px;
-   
     display: flex;
     justify-content: center;
     align-items: center;
+    position: absolute;
+    top: 47%;
+    cursor: pointer;
 }
 
-.previous > img, .next > img{
-    width: 50%;
-    height: 50%;
+.previous > svg, .next > svg{
+    width: auto;
+    height: auto;
+    margin: 0.5rem;
+    
 }
 
 .previous{
-    left: 10rem;
+    left: 5%;
+}
+
+.next{
+    right: 5%;
+}
+
+#svg1:hover, #svg2:hover{
+    color: var(--Orange);
+}
+
+/* Article */
+
+article{
+    margin-left: 0.8rem;
+    margin-right: 0.8rem;
+}
+
+.articleText h2{
+    color: orange;
+    font-family: 'Kumbh Sans', sans-serif;
+    font-size: 0.6rem;
+    font-weight: 800;
+    letter-spacing: 0.1rem;
+    margin-top: 1rem;
+}
+
+.articleText h1{
+    font-family: 'Kumbh Sans', sans-serif;
+    font-weight: 700;
+    font-size: 1.4rem;
+}
+
+.articleText p{
+    font-family: 'Kumbh Sans', sans-serif;
+    font-weight: 400;
+    font-size: 0.8rem;
+    color: var(--Dark-grayish-blue);
+    line-height: 1.3rem;
+
+}
+
+.articleText{
+    margin-bottom: 1.5rem;
+}
+
+.articlePrice{
+    display: block;
+    margin-top:2rem;
+}
+
+.newPrice{
+    font-size: 1.5rem;
+    font-family: 'Kumbh Sans', sans-serif;
+    font-weight: 700;
+    float: left;
+}
+
+.discount{
+    font-size: 0.8rem;
+    font-family: 'Kumbh Sans', sans-serif;
+    font-weight: 700;
+    color: var(--Orange);
+    background: var(--Pale-orange);
+    margin-left: 0.9rem;
+    padding: 0.2rem;
+    border-radius: 6px;
+    float: left;
+    margin-top: 0.1rem;
+}
+
+.oldPrice{
+    float: right;
+    font-size: 0.8rem;
+    font-family: 'Kumbh Sans', sans-serif;
+    font-weight: 700;
+    margin-top: 0.2rem;
+    color: var(--Grayish-blue);
+    text-decoration: line-through;
+   
+    
 }
