--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,7 @@ header{
     width: 100%;
     height: 30%;
     overflow: hidden;
-    position: relative;
+
 }
 
 .mainImgContainer > img{
@@ -105,7 +105,7 @@ header{
     display: flex;
     justify-content: center;
     align-items: center;
-    position: absolute;
+    position: relative;
     top: 47%;
     cursor: pointer;
 }
@@ -196,7 +196,126 @@ article{
     font-weight: 700;
     margin-top: 0.2rem;
     color: var(--Grayish-blue);
-    text-decoration: line-through;
-   
+    text-decoration: line-through;   
+}
+
+section{
+    margin-top: 15vh;
+}
+
+.counterContainer{
+    display: grid;
+    width: 100%;
+    grid-template-columns: 1fr 1fr 1fr;
     
+    
+}
+
+.counter{
+    display: flex;
+    justify-content: center;
+    font-weight: 700;
+    font-family: 'Kumbh Sans', sans-serif;
+
+}
+.plus{
+    display: flex;
+    margin-top: 0.15rem;
+    width: 1rem;
+    cursor: pointer;
+    margin-right: 1.5rem;
+    justify-self: right;
+}
+
+.minus{
+    display: flex;
+    width: 1rem;
+    margin-top: 0.55rem;
+    margin-left: 1.5rem;
+    cursor: pointer;
+}
+
+.plus:hover, .minus:hover, .cartBtn:hover{
+    opacity: 70%;
+}
+
+#colorPlus, #colorMinus{
+    color: var(--Orange);
+}
+
+.cartBtn{
+    width: 100%;
+    height: 4rem;
+    background: var(--Orange);
+    border: none;
+    border-radius: 12px;
+    font-family: 'Kumbh Sans', sans-serif;
+    font-size: 1.2rem;
+    font-weight: 600;
+    color: white;
+    margin-top: 5vh;
+    cursor: pointer;
+    
+}
+
+#cart{
+    font-size: rem;
+}
+
+#lol{
+    height: 0.5rem;
+    margin-right: 1rem;
+}
+
+/* Toggle Navbar */
+
+.toggle-nav{
+    position: fixed;   
+    height: 100%;
+    width: 101%;
+    top:0;
+    margin-left: -1rem;
+}
+
+.navDiv{
+    width: 65%;
+    height: 100%;
+    background: white;
+    opacity: 100%;
+    float: left;
+}
+
+.blurDiv{
+    width:  32%;
+    height: 100%;
+    background: black;
+    opacity: 0.5;
+    float: right;
+    padding-right: 3%;
+    
+}
+
+.closeBtn{
+    height: 2rem;
+    width: 2rem;
+    position: block;
+    float: left;
+    margin-top: 1rem;
+    margin-left: 2rem;
+    cursor: pointer;
+}
+
+.toggleMenu{
+    margin:0;
+    position: block;
+    float: left;
+    margin-left: ;
+    margin-top: 5rem;
+    line-height: 2.5rem;
+}
+
+.toggleMenu > li > a {
+    font-family: "Inter-Bold";
+    color: black;
+    font-weight: 500;
 }
